--- a/samples/app/package.json
+++ b/samples/app/package.json
@@ -96,7 +96,7 @@
     "react-native-tcp-socket": "~6.0.6",
     "react-native-toast-message": "~2.1.10",
     "react-native-uuid": "~2.0.3",
-    "react-native-vector-icons": "~10.0.3",
+    "react-native-vector-icons": "^10.3.0",
     "react-native-vision-camera": "~4.3.2",
     "react-native-webrtc": "^124.0.4",
     "react-native-webview": "~13.10.7",
